Minor modification to page

--- a/index.html
+++ b/index.html
@@ -31,15 +31,9 @@
 
       <section>
         <div id="title">
-          <h1>Kerchevalphotography.com</h1>
+          <h1>static.kerchevalphotography.com</h1>
           <p>Static content for Kercheval Photography</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/kercheval">kercheval</a></span>
         </div>
-
-        <h3>Kercheval Photography Static Content</h3>
-      </section>
-
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
